// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridContainer renders grid when loggedin without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(GridContainer)
    store={
        Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "addNew": [Function],
      "deleteCol": [Function],
      "deleteRow": [Function],
      "gridCols": Object {
        "0": Object {
          "deleted": false,
          "header": "type",
          "inputType": "text",
          "number": 0,
          "order": 0,
          "sort": "n",
          "type": "STRING",
          "width": 150,
        },
        "1": Object {
          "deleted": false,
          "header": "extdesc",
          "inputType": "text",
          "number": 1,
          "order": 1,
          "sort": "n",
          "type": "STRING",
          "width": 150,
        },
        "2": Object {
          "deleted": false,
          "header": "description",
          "inputType": "text",
          "number": 2,
          "order": 2,
          "sort": "n",
          "type": "STRING",
          "width": 150,
        },
        "3": Object {
          "deleted": false,
          "header": "amount",
          "inputType": "text",
          "number": 3,
          "order": 3,
          "sort": "n",
          "type": "NUMBER",
          "width": 150,
        },
        "4": Object {
          "deleted": false,
          "header": "differed",
          "inputType": "checkbox",
          "number": 4,
          "order": 4,
          "sort": "n",
          "type": "BOOLEAN",
          "width": 150,
        },
        "5": Object {
          "deleted": false,
          "header": "date",
          "inputType": "date",
          "number": 5,
          "order": 5,
          "sort": "n",
          "type": "DATE",
          "width": 150,
        },
      },
      "gridData": Array [
        Object {
          "amount": "-4.43",
          "date": "2016-02-23",
          "description": "POS Transaction VONS Store 1797 SAN DIEGO CAUS",
          "differed": false,
          "extdesc": "ABC VONS Store 1797 SAN DIEGO CAUS",
          "type": "POS",
        },
      ],
      "login": "login",
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
      "updateCell": [Function],
      "updateColOrder": [Function],
      "updateColWidth": [Function],
      "updateSort": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "addNew": [Function],
        "deleteCol": [Function],
        "deleteRow": [Function],
        "gridCols": Object {
          "0": Object {
            "deleted": false,
            "header": "type",
            "inputType": "text",
            "number": 0,
            "order": 0,
            "sort": "n",
            "type": "STRING",
            "width": 150,
          },
          "1": Object {
            "deleted": false,
            "header": "extdesc",
            "inputType": "text",
            "number": 1,
            "order": 1,
            "sort": "n",
            "type": "STRING",
            "width": 150,
          },
          "2": Object {
            "deleted": false,
            "header": "description",
            "inputType": "text",
            "number": 2,
            "order": 2,
            "sort": "n",
            "type": "STRING",
            "width": 150,
          },
          "3": Object {
            "deleted": false,
            "header": "amount",
            "inputType": "text",
            "number": 3,
            "order": 3,
            "sort": "n",
            "type": "NUMBER",
            "width": 150,
          },
          "4": Object {
            "deleted": false,
            "header": "differed",
            "inputType": "checkbox",
            "number": 4,
            "order": 4,
            "sort": "n",
            "type": "BOOLEAN",
            "width": 150,
          },
          "5": Object {
            "deleted": false,
            "header": "date",
            "inputType": "date",
            "number": 5,
            "order": 5,
            "sort": "n",
            "type": "DATE",
            "width": 150,
          },
        },
        "gridData": Array [
          Object {
            "amount": "-4.43",
            "date": "2016-02-23",
            "description": "POS Transaction VONS Store 1797 SAN DIEGO CAUS",
            "differed": false,
            "extdesc": "ABC VONS Store 1797 SAN DIEGO CAUS",
            "type": "POS",
          },
        ],
        "login": "login",
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
        "updateCell": [Function],
        "updateColOrder": [Function],
        "updateColWidth": [Function],
        "updateSort": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`GridContainer renders without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(GridContainer)
    store={
        Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "addNew": [Function],
      "deleteCol": [Function],
      "deleteRow": [Function],
      "gridCols": Object {
        "0": Object {
          "deleted": false,
          "header": "type",
          "inputType": "text",
          "number": 0,
          "order": 0,
          "sort": "n",
          "type": "STRING",
          "width": 150,
        },
        "1": Object {
          "deleted": false,
          "header": "extdesc",
          "inputType": "text",
          "number": 1,
          "order": 1,
          "sort": "n",
          "type": "STRING",
          "width": 150,
        },
        "2": Object {
          "deleted": false,
          "header": "description",
          "inputType": "text",
          "number": 2,
          "order": 2,
          "sort": "n",
          "type": "STRING",
          "width": 150,
        },
        "3": Object {
          "deleted": false,
          "header": "amount",
          "inputType": "text",
          "number": 3,
          "order": 3,
          "sort": "n",
          "type": "NUMBER",
          "width": 150,
        },
        "4": Object {
          "deleted": false,
          "header": "differed",
          "inputType": "checkbox",
          "number": 4,
          "order": 4,
          "sort": "n",
          "type": "BOOLEAN",
          "width": 150,
        },
        "5": Object {
          "deleted": false,
          "header": "date",
          "inputType": "date",
          "number": 5,
          "order": 5,
          "sort": "n",
          "type": "DATE",
          "width": 150,
        },
      },
      "gridData": Array [
        Object {
          "amount": "-4.43",
          "date": "2016-02-23",
          "description": "POS Transaction VONS Store 1797 SAN DIEGO CAUS",
          "differed": false,
          "extdesc": "ABC VONS Store 1797 SAN DIEGO CAUS",
          "type": "POS",
        },
      ],
      "login": "",
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
      "updateCell": [Function],
      "updateColOrder": [Function],
      "updateColWidth": [Function],
      "updateSort": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "addNew": [Function],
        "deleteCol": [Function],
        "deleteRow": [Function],
        "gridCols": Object {
          "0": Object {
            "deleted": false,
            "header": "type",
            "inputType": "text",
            "number": 0,
            "order": 0,
            "sort": "n",
            "type": "STRING",
            "width": 150,
          },
          "1": Object {
            "deleted": false,
            "header": "extdesc",
            "inputType": "text",
            "number": 1,
            "order": 1,
            "sort": "n",
            "type": "STRING",
            "width": 150,
          },
          "2": Object {
            "deleted": false,
            "header": "description",
            "inputType": "text",
            "number": 2,
            "order": 2,
            "sort": "n",
            "type": "STRING",
            "width": 150,
          },
          "3": Object {
            "deleted": false,
            "header": "amount",
            "inputType": "text",
            "number": 3,
            "order": 3,
            "sort": "n",
            "type": "NUMBER",
            "width": 150,
          },
          "4": Object {
            "deleted": false,
            "header": "differed",
            "inputType": "checkbox",
            "number": 4,
            "order": 4,
            "sort": "n",
            "type": "BOOLEAN",
            "width": 150,
          },
          "5": Object {
            "deleted": false,
            "header": "date",
            "inputType": "date",
            "number": 5,
            "order": 5,
            "sort": "n",
            "type": "DATE",
            "width": 150,
          },
        },
        "gridData": Array [
          Object {
            "amount": "-4.43",
            "date": "2016-02-23",
            "description": "POS Transaction VONS Store 1797 SAN DIEGO CAUS",
            "differed": false,
            "extdesc": "ABC VONS Store 1797 SAN DIEGO CAUS",
            "type": "POS",
          },
        ],
        "login": "",
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
        "updateCell": [Function],
        "updateColOrder": [Function],
        "updateColWidth": [Function],
        "updateSort": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
